--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=9898
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/examplejpa
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=update
